--- a/public/404.html
+++ b/public/404.html
@@ -58,10 +58,11 @@
   <!-- This file lives in public/404.html -->
   <div class="dialog">
     <div>
-      <h1>The page you were looking for doesn't exist.</h1>
-      <p>You may have mistyped the address or the page may have moved.</p>
+      <h1>Opps! Something went wrong.</h1>
+      <p>Let's <a href="https://chendojo004.com/">go back</a> and try again!</p>
+      
     </div>
-    <p>If you are the application owner check the logs for more information.</p>
+    <p>If this error persists, please contact the developer.</p>
   </div>
 </body>
 </html>
